--- a/src/app/admin-home/admin-home.component.html
+++ b/src/app/admin-home/admin-home.component.html
@@ -1,4 +1,5 @@
-<app-navbar></app-navbar>
+<app-admin-navbar></app-admin-navbar>
+
   <mdb-carousel class="carousel slide carousel-fade" [type]="'carousel-thumbnails'" [animation]="'fade'">
       <mdb-carousel-item>
         <img class="d-block w-100" src="https://media.gettyimages.com/photos/digital-human-brain-covered-with-networks-picture-id870184586?s=2048x2048" alt="First slide">
@@ -107,3 +108,4 @@
 </div>
 <hr>
 <app-footer></app-footer>
+
