--- a/src/app/super-admin/super-admin.component.html
+++ b/src/app/super-admin/super-admin.component.html
@@ -1,5 +1,5 @@
-
-<div class="row" style="margin-top: 60px;">
+<app-admin-navbar></app-admin-navbar>
+<div class="row" >
     <div class="col-2">
       <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical" >
           <p class="text-center nav-text" >SUPER ADMIN</p>
