--- a/src/app/course-video/course-video.component.html
+++ b/src/app/course-video/course-video.component.html
@@ -1,4 +1,5 @@
-<h1  class= "text-center" style="margin-top: 100px; font-weight: bold;">{{course.name}}</h1>
+<app-navbar></app-navbar>
+<h1  class= "text-center" style=" font-weight: bold;">{{course.name}}</h1>
 <p >{{name}} : {{vidName}}</p>
 <div class="row">
   <div class="col">
