--- a/src/app/displaycourses/displaycourses.component.html
+++ b/src/app/displaycourses/displaycourses.component.html
@@ -1,4 +1,5 @@
-<div class="row"   style="margin-top: 60px">
+<app-navbar></app-navbar>
+<div class="row" >
   <div class="col-2 grey lighten-4">
       <form style="margin-left:50px;margin-top: 20px;">
         <div class="row">
@@ -104,7 +105,7 @@
 
                     </mdb-card-text>
 
-                    <star-rating [value]="course.rating" checkedcolor="orange" uncheckedcolor="black" size="24px"    readonly="true" ></star-rating>
+                    <star-rating [value]="course.rate" checkedcolor="orange" uncheckedcolor="black" size="24px"    readonly="true" ></star-rating>
 
                   </mdb-card-body>
                 </mdb-card>
