--- a/src/app/search-course/search-course.component.html
+++ b/src/app/search-course/search-course.component.html
@@ -1,5 +1,5 @@
-
-<div class="row" style="margin-top: 60px;">
+<app-navbar></app-navbar>
+<div class="row" >
     <div class="col-md-3" *ngFor="let course of serchCourse" >
 
 
