--- a/src/app/contentprovider/contentprovider.component.html
+++ b/src/app/contentprovider/contentprovider.component.html
@@ -7,7 +7,7 @@
   </div>
 </div> -->
 <app-navbar></app-navbar>
-<div class="row" >
+<div class="row" style="margin-top:60px;" >
     <div class="col-2">
       <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical" >
           <p class="text-center nav-text" >MENU</p>
