--- a/src/app/contentprovider/mycourse/mycourse.component.html
+++ b/src/app/contentprovider/mycourse/mycourse.component.html
@@ -3,29 +3,42 @@
   <div class="row" >
     <div class="col-md-3" *ngFor="let course of pending" >
      <!-- Card -->
-      <mdb-card >
-          <div class="view rgba-white-slight waves-light" mdbWavesEffect>
-            <!-- Card img -->
-            <img src="{{course.url}}" alt="Card image cap" >
-            <a [routerLink]="['/',course._id,'coursevideo']">
-              <div class="mask"></div>
-            </a>
+     <mdb-card >
+      <div class="view rgba-white-slight waves-light" mdbWavesEffect>
+        <!-- Card img -->
+        <img src="{{course.url}}" alt="Card image cap"  style="height: 160px;" >
+        <a [routerLink]="['/displaycourses','course-content',course._id]">
+          <div class="mask"></div>
+        </a>
 
-          </div>
-          <!--Card content-->
-          <mdb-card-body>
-            <!--Title-->
-            <mdb-card-title>
-              <h4>{{course.name}}</h4>
-            </mdb-card-title>
-            <P>Author: {{course.author}}</P>
-            <!--Text-->
-            <!-- <mdb-card-text>
-             {{course.description | shorten}}
-            </mdb-card-text> -->
+      </div>
+      <!--Card content-->
+      <mdb-card-body style=" height: 30px;" >
+        <!--Title-->
+        <mdb-card-title >
+          <h6>{{course.name | shorten}}</h6>
+        </mdb-card-title>
 
-          </mdb-card-body>
-        </mdb-card>
+        <!--Text-->
+
+      </mdb-card-body>
+
+      <div style="max-height: 50px; margin-bottom: 10px;margin: auto; ">
+
+
+       <div class="row">
+          <div class="col-6">
+
+              <button  mdbBtn type="button" color="primary" outline="true" size="sm" mdbWavesEffect style="margin-bottom: 10px;" mdbWavesEffect [routerLink]="['/contentProvider','update',course._id]" routerLinkActive="router-link-active" >Update</button>
+            </div>
+            <div class="col-6">
+
+              <button mdbBtn type="button" color="danger" outline="true" size="sm" mdbWavesEffect style="margin-bottom: 10px;" (click)="onDelete()" >Remove</button>
+            </div>
+       </div>
+
+        </div>
+    </mdb-card>
         <!-- Card -->
     </div>
   </div>
@@ -37,29 +50,32 @@
   <div class="row" >
     <div class="col-md-3" *ngFor="let course of accepted" >
      <!-- Card -->
-      <mdb-card >
-          <div class="view rgba-white-slight waves-light" mdbWavesEffect>
-            <!-- Card img -->
-            <img src="{{course.url}}" alt="Card image cap" >
-            <a [routerLink]="['/',course._id,'coursevideo']">
-              <div class="mask"></div>
-            </a>
+     <mdb-card >
+      <div class="view rgba-white-slight waves-light" mdbWavesEffect>
+        <!-- Card img -->
+        <img src="{{course.url}}" alt="Card image cap"  style="height: 160px;" >
+        <a [routerLink]="['/displaycourses','course-content',course._id]">
+          <div class="mask"></div>
+        </a>
 
-          </div>
-          <!--Card content-->
-          <mdb-card-body>
-            <!--Title-->
-            <mdb-card-title>
-              <h4>{{course.name}}</h4>
-            </mdb-card-title>
-            <P>Author: {{course.author}}</P>
-            <!--Text-->
-            <!-- <mdb-card-text>
-             {{course.description | shorten}}
-            </mdb-card-text> -->
+      </div>
+      <!--Card content-->
+      <mdb-card-body style=" height: 30px;" >
+        <!--Title-->
+        <mdb-card-title >
+          <h6>{{course.name | shorten}}</h6>
+        </mdb-card-title>
 
-          </mdb-card-body>
-        </mdb-card>
+        <!--Text-->
+
+      </mdb-card-body>
+
+      <div style="max-height: 50px; margin-bottom: 10px;margin: auto; ">
+
+
+
+        </div>
+    </mdb-card>
         <!-- Card -->
     </div>
   </div>
@@ -71,32 +87,73 @@
   <div class="row" >
     <div class="col-md-3" *ngFor="let course of rejected" >
      <!-- Card -->
-      <mdb-card >
-          <div class="view rgba-white-slight waves-light" mdbWavesEffect>
-            <!-- Card img -->
-            <img src="{{course.url}}" alt="Card image cap" >
-            <a [routerLink]="['/',course._id,'coursevideo']">
-              <div class="mask"></div>
-            </a>
+     <mdb-card >
+      <div class="view rgba-white-slight waves-light" mdbWavesEffect>
+        <!-- Card img -->
+        <img src="{{course.url}}" alt="Card image cap"  style="height: 160px;" >
+        <a [routerLink]="['/displaycourses','course-content',course._id]">
+          <div class="mask"></div>
+        </a>
 
-          </div>
-          <!--Card content-->
-          <mdb-card-body>
-            <!--Title-->
-            <mdb-card-title>
-              <h4>{{course.name}}</h4>
-            </mdb-card-title>
-            <P>Author: {{course.author}}</P>
-            <!--Text-->
-            <!-- <mdb-card-text>
-             {{course.description | shorten}}
-            </mdb-card-text> -->
+      </div>
+      <!--Card content-->
+      <mdb-card-body style=" height: 30px;" >
+        <!--Title-->
+        <mdb-card-title >
+          <h6>{{course.name | shorten}}</h6>
+        </mdb-card-title>
 
-          </mdb-card-body>
-        </mdb-card>
+        <!--Text-->
+
+      </mdb-card-body>
+
+      <div style="max-height: 50px; margin-bottom: 10px;margin: auto; ">
+
+        <div class="col-6">
+
+          <button mdbBtn type="button" color="primary" outline="true" size="sm" mdbWavesEffect style="margin-bottom: 10px;" >Update</button>
+        </div>
+        <div class="col-6">
+
+          <button mdbBtn type="button" color="primary" outline="true" size="sm" mdbWavesEffect style="margin-bottom: 10px;" >Remove</button>
+        </div>
+
+        </div>
+    </mdb-card>
         <!-- Card -->
     </div>
   </div>
 
 
+</div>
+
+
+
+<!-- --------------------------------------------------udpate model----------------------------------------------------------------------- -->
+
+<div mdbModal #update="mdbModal" class="modal fade top" id="frameModalTop" tabindex="-1" role="dialog"
+     aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <!--Content-->
+    <div class="modal-content form-elegant">
+      <!--Header-->
+      <div class="modal-header text-center">
+        <h3 class="modal-title w-100 dark-grey-text font-weight-bold my-3" id="myModalLabel">
+          <strong>Update Course</strong>
+        </h3>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="update.hide()">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <!--Body-->
+      <div class="modal-body">
+        <!--Body-->
+        <app-updatecourse></app-updatecourse>
+
+      </div>
+      <!--Footer-->
+
+    </div>
+    <!--/.Content-->
+  </div>
 </div>
