admin remove courese

--- a/src/app/admin/content-provider/content-provider.component.html
+++ b/src/app/admin/content-provider/content-provider.component.html
@@ -6,9 +6,9 @@
                   <div class="view rgba-white-slight waves-light" mdbWavesEffect>
                     <!-- Card img -->
                     <img src="{{cp.imageURL}}" alt="Card image cap" >
-                    <!-- <a [routerLink]="['/',course._id,'coursevideo']">
+                    <a [routerLink]="['/contentproviderprofile',cp._id]">
                       <div class="mask"></div>
-                    </a> -->
+                    </a>
 
                   </div>
                   <!--Card content-->
