--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -74,7 +74,7 @@
         <!--Card image-->
         <div class="view view-cascade overlay waves-light" mdbWavesEffect>
           <img [src]="course.url" style="width: 100%;height:150px;border:none">
-          <a>
+          <a [routerLink]="['/displaycourses','course-content',course._id]" >
             <div class="mask rgba-white-slight"></div>
           </a>
         </div>
