--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <!--Navbar-->
-<mdb-navbar SideClass="navbar navbar-expand-lg navbar-light white fixed-top" [containerInside]="false">
+<mdb-navbar SideClass="navbar navbar-expand-lg navbar-light  blue-grey lighten-5 fixed-top" [containerInside]="false">
 
   <!-- Navbar brand -->
-  <mdb-navbar-brand><a class="navbar-brand" [routerLink]="['/home']" routerLinkActive="router-link-active" >Navbar</a></mdb-navbar-brand>
+  <mdb-navbar-brand><a class="navbar-brand" [routerLink]="['/home']" routerLinkActive="router-link-active" style="font-weight: bold;">E-Tuter</a></mdb-navbar-brand>
 
   <!-- Collapsible content -->
   <links>
@@ -58,10 +58,10 @@
 
                 <li class="nav-item avatar dropdown" dropdown>
                   <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
-                    <img [src]="user.imageURL" alt="avatar inage" class="img-fluid rounded-circle z-depth-0" style="height: 40px;"></a>
+                    <img [src]="user.imageURL" alt="avatar inage" class="img-fluid rounded-circle z-depth-0" style="height: 40px; width: 40px;"></a>
                   <div *dropdownMenu class="dropdown-menu dropdown-menu-right dropdown dropdown-primary" role="menu">
                     <a class="dropdown-item waves-light" mdbWavesEffect (click)="onLogout()" routerLink="/home">Logout</a>
-                    <a class="dropdown-item waves-light" mdbWavesEffect routerLink="/student">Setting</a>
+                    <a class="dropdown-item waves-light" mdbWavesEffect routerLink="/student">Profile</a>
                   </div>
                 </li>
               </ul>
@@ -130,6 +130,7 @@
               <a  (click)="forgetPassword.show(); login.hide()" class="blue-text ml-1"> Password?</a>
             </p>
           </div>
+          <p class="text-center" style="color: red;">{{msg}}</p>
 
           <div class="text-center mb-3">
             <button type="submit" mdbBtn gradient="blue" block="true" rounded="true" class="z-depth-1a waves-light"
