--- a/src/app/student/my-courses/my-courses.component.html
+++ b/src/app/student/my-courses/my-courses.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" style="margin-top:60px;">
 
   <div class="col-md-3" *ngFor="let course of courses.User.registerCourse" >
     <!-- Card -->
@@ -15,12 +15,12 @@
          <mdb-card-body>
            <!--Title-->
            <mdb-card-title>
-             <h4>{{course.name}}</h4>
+             <h6>{{course.name | shorten}}</h6>
            </mdb-card-title>
 
            <!--Text-->
            <mdb-card-text>
-            {{course.description | shorten}}
+            By:{{course.author}}
            </mdb-card-text>
            <star-rating [value]="course.rating" checkedcolor="orange" uncheckedcolor="black" size="24px"readonly="true" ></star-rating>
 
