--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -61,7 +61,7 @@
                     <img [src]="user.imageURL" alt="avatar inage" class="img-fluid rounded-circle z-depth-0" style="height: 40px; width: 40px;"></a>
                   <div *dropdownMenu class="dropdown-menu dropdown-menu-right dropdown dropdown-primary" role="menu">
                     <a class="dropdown-item waves-light" mdbWavesEffect (click)="onLogout()" routerLink="/home">Logout</a>
-                    <a class="dropdown-item waves-light" mdbWavesEffect routerLink="/student">Profile</a>
+                    <a class="dropdown-item waves-light" mdbWavesEffect routerLink="/user.role">Profile</a>
                   </div>
                 </li>
               </ul>
